<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu"
    android:id="@+id/MenuScreen"
    android:background="@drawable/background_listr"
    android:orientation="vertical"
    android:weightSum="10">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="10"
        android:gravity="right"
        android:padding="10dp">
        <ImageButton
            android:id="@+id/MenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_menu_butten_image" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:fontFamily="@font/bangers"
        android:gravity="center"
        android:text="@string/app_Game"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/StartPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/Startgame" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/State"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/Stategame" />


    </LinearLayout>


</LinearLayout>