<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/DialogContainer"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />
        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="2dp"
            android:layout_alignParentRight="true" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txttiteDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/bangers"
                android:text="@string/settingsDialog"
                android:textColor="@color/colorBlacky"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/musicswitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/bangers"
                android:text="@string/musicSwitchTitle"
                android:textSize="20sp"
                android:textColor="@color/colorBlacky"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:checked="true"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="12dp">


                <Button
                    android:id="@+id/ButtonGoBackfromDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/backTomenu"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>



</RelativeLayout>